--- a/Social-app-V2/package.json
+++ b/Social-app-V2/package.json
@@ -26,13 +26,15 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-gesture-handler": "^2.8.0",
     "react-native-gifted-chat": "^1.1.0",
     "react-native-ionicons": "^4.6.5",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-swiper-flatlist": "^3.0.17",
     "react-native-web": "~0.18.7",
     "react-redux": "^8.0.4",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "socket.io-client": "^4.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
