--- a/Social-app-V2/package.json
+++ b/Social-app-V2/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "expo start --dev-client",
+    "start": " expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
@@ -20,6 +20,7 @@
     "expo-constants": "^13.2.4",
     "expo-font": "^10.2.1",
     "expo-image-picker": "^13.1.1",
+    "expo-screen-capture": "^5.0.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.6.10",
